--- a/pages/oAutoru.html
+++ b/pages/oAutoru.html
@@ -21,9 +21,11 @@
     </nav>
 	<h1>О аутору</h1>
     <main>
-        Аутор ове веб апликације је Милосав Живковић.<br>
-        Ученик је четврте године Електро-саобраћајне техничке школе "Никола Тесла" у Краљеву.<br>
-        Рођен је у Краљеву 27. маја 2004. године.			
+        <p>
+            Аутор ове веб апликације је Никола Крсмановић.<br>
+            Ученик је четврте године Електро-саобраћајне техничке школе "Никола Тесла" у Краљеву.<br>
+            Рођен је у Краљеву 23.фебруара 2004. године.
+        </p>		
     </main>
 </body>
 </html>
